--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(parse_node)
 export(xmlString)
 exportClasses(CatalogRefClass)
 exportClasses(DatasetRefClass)
-exportClasses(DatasetsRefClass)
+exportClasses(DatasetCollectionRefClass)
 exportClasses(ServiceRefClass)
 exportClasses(ThreddsNodeRefClass)
 exportClasses(TopCatalogRef)
